crates/sotf-plugins/tests/snapshots/render_plan_snapshots__limiter__limiter__desktop_1400.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "limiter",
  "width": 1400.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "horizontal",
  "knob_size": "md",
  "group_direction": "row",
  "slider_height": 180.0,
  "show_visualizations": true,
  "columns_visible": [
    "main"
  ],
  "columns_collapsed": [],
  "visible_group_ids": [
    "DYNAMICS",
    "TIMING",
    "DETECTOR"
  ],
  "overflow_group_ids": [],
  "config_controls": [],
  "main_groups": [
    {
      "id": "DYNAMICS",
      "title": "DYNAMICS",
      "controls": [
        {
          "param_index": 0,
          "param_name": "Threshold",
          "control_type": "vertical_slider",
          "unit": "dB",
          "range": [
            -20.0,
            0.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 1,
          "param_name": "Release",
          "control_type": "vertical_slider",
          "unit": "ms",
          "range": [
            10.0,
            1000.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 4,
          "param_name": "True Peak",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 18446744073709551615,
          "param_name": "(meter)",
          "control_type": "bar_meter(-20..0)",
          "unit": "",
          "range": null,
          "read_only": true,
          "enabled": false
        },
        {
          "param_index": 7,
          "param_name": "Mix",
          "control_type": "knob",
          "unit": "%",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    },
    {
      "id": "TIMING",
      "title": "Timing & lookahead",
      "controls": [
        {
          "param_index": 2,
          "param_name": "Lookahead",
          "control_type": "vertical_slider",
          "unit": "ms",
          "range": [
            0.0,
            20.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 6,
          "param_name": "Dual Release",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    },
    {
      "id": "DETECTOR",
      "title": "Knee & detection",
      "controls": [
        {
          "param_index": 3,
          "param_name": "Soft Knee",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 5,
          "param_name": "ISP Limit",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 9,
          "param_name": "Feed Forward",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 8,
          "param_name": "Link",
          "control_type": "vertical_slider",
          "unit": "%",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 10,
          "param_name": "Oversampling",
          "control_type": "selector",
          "unit": "",
          "range": [
            0.0,
            2.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    }
  ],
  "output_controls": [],
  "tabs": [],
  "viz_slots": [
    {
      "viz_type": "transfer_curve",
      "position": "below:DYNAMICS"
    }
  ],
  "dynamic_sections": []
}
